syntax = "proto3";
package lbhash.options.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/options/lbhash";

import "google/protobuf/duration.proto";

import "extproto/ext.proto";
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;
option (extproto.equal_all) = true;

// Specifies the routeâ€™s hashing policy if the upstream cluster uses a hashing load balancer.
// https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/route/v3/route.proto#envoy-api-msg-route-routeaction-hashpolicy
message RouteActionHashConfig {
    // The list of policies Envoy will use when generating a hash key for a hashing load balancer
    repeated HashPolicy hash_policies = 1;
}

// Envoy supports two types of cookie affinity:
// - Passive: Envoy reads the cookie from the headers
// - Generated: Envoy uses the cookie spec to generate a cookie
// In either case, the cookie is incorporated in the hash key.
// additional notes https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/route/v3/route.proto#envoy-api-msg-route-routeaction-hashpolicy-cookie
message Cookie {
    // required, the name of the cookie to be used to obtain the hash key
    string name = 1;
    // If specified, a cookie with the TTL will be generated if the cookie is not present. If the TTL is present and zero, the generated cookie will be a session cookie.
    google.protobuf.Duration ttl = 2;
    // The name of the path for the cookie. If no path is specified here, no path will be set for the cookie.
    string path = 3;
}

// Specifies an element of Envoy's hashing policy for hashing load balancers
message HashPolicy {
    oneof KeyType {
        // Use a given header's value as a component of the hashing load balancer's hash key
        string header = 1;
        // Use a given cookie as a component of the hashing load balancer's hash key
        Cookie cookie = 2;
        // Use the request's source IP address as a component of the hashing load balancer's hash key
        bool source_ip = 3;
    }
    // If set, and a hash key is available after evaluating this policy, Envoy will skip the subsequent policies and
    // use the key as it is.
    // This is useful for defining "fallback" policies and limiting the time Envoy spends generating hash keys.
    bool terminal = 4;
}

